--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,81 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-218.5KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇭🇰 香港-389.3KB/s(Youtube:不良林), server: scloud56.jafiyun.life, port: 22056, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud56.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-529.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-545.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-301.0KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-539.1KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-432.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-359.4KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇳🇱 荷兰-598.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇨🇳 中国-918.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-525.4KB/s(Youtube:不良林), server: scloud55.jafiyun.life, port: 22055, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud55.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-791.4KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-399.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-705.6KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-322.5KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -95,11 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-218.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-389.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-529.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-545.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-301.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-539.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-432.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-598.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-525.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-791.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-399.7KB/s(Youtube:不良林)
+      - 🇩🇪 德国-705.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-322.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
